# rags

./: .gitignore  README.md  app.py  init_data.py  pyproject.toml  requirements.txt  test_pipeline_run.py
.github/: copilot-instructions.md
data/: .gitkeep  sample_data.json
dev/notebooks/: intro.ipynb
dev/notebooks/data/chromadb/: chroma.sqlite3
models/: .gitkeep
notebooks/: RAG_Pipeline_Demo.ipynb  step-by-step.html  step-by-step.ipynb
src/: __init__.py  data_loader.py  embedding_service.py  generator.py  pipeline.py  retriever.py  vector_store.py
tests/: __init__.py  test_embedding_service.py  test_pipeline.py  test_retriever.py  test_vector_store.py
